--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha --reporter spec"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/safekey/dispatch#readme",
   "dependencies": {
-    "http": "0.0.0"
+    "chai": "^3.5.0",
+    "http": "0.0.0",
+    "mocha": "^3.0.2",
+    "request": "^2.74.0"
   }
 }
